HISTORY OF TAROTCLUB VERSIONS

+ new feature
~ bug corrected
- feature removed

* version 2.3.4 <Snowboard>
  -------------------------------
    ~ Correction: little endian bonus in case of slam and fool in last trick was not detected
    + New drop shadow effect on cards

* version 2.3.3 <Snowboard>
  -------------------------------
    ~ Correction: show handle sequence was not managed well
    ~ Correction: the dog cards was hidden in the player's hand
    ~ Correction: the slam tick was not cleared between two deals
    
* version 2.3.2 <Snowboard>
  -------------------------------
    ~ Correction: the user does not send the discard to the server
    ~ Correction: the deal JSON output was not JSON compliant
    ~ Removed winner message box (no sense for one deal)
    + Auto play works also for bid step
    + JSON reader now uses its own parser instead of the Duktape's one
    + New JSON configuration file for AI scripts

* version 2.3.1 <Snowboard>
  -------------------------------
    ~ Corrected french translation, bug in translation file loading and in Canvas item texts
    ~ Make the debian package dependant of QtSvg

* version 2.3.0 <Snowboard>
  -------------------------------
    + Show south cards with a constant padding, middle alignment
    + Use JSON instead of XML for client/server configuration and various generated files (deals, statistics ...)
    + Advanced logging system in files and in the DebugDock window
    + Network protocol robustness's: better header, more synchronization with clients, separate class file
    + Restart game without previous disconnection
    + Exit game gracefully, cooperative termination of threads with join()
    + Beginner AI level (defense only)
    + New option: suit order selection
    + Show the game result in the Canvas instead of a Window (Android compatibility)
    + Big internal rework of code architecture (
    + Full standard C++11 dedicated server, without Qt. Compatible with MSVC++ 2013 Express.